home page update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <div class="fixed-top">
     <!-- ======= Header ======= -->
-    <div class="top-header p-4">
+    <div class="top-header">
       <div class="container">
         <div class="row d-flex align-items-center justify-content-evenly">
           <div class="col-md-4 text-center p-2">
@@ -149,16 +149,16 @@
 
       <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
-      <div class="carousel-inner" role="listbox">
+      <div class="carousel-inner mt-5" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-a.png)">
+        <div class="carousel-item active mt-5" style="background-image: url(assets/img/slide/slide-a.png)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5">
                 <span class="red">AFLAX: RETAIL</span> <br> PUT YOUR
                 CUSTOMERS IN THE MOOD TO BUY</h2>
-              <p class="animate__animated animate__fadeInUp mt-5">Create a fully-branded in-store experience that drives
+              <p class="animate__animated animate__fadeInUp">Create a fully-branded in-store experience that drives
                 lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers
                 looking for something special, we offer a range of innovative digital signage retail solutions to make
                 your store stand out. to buy again and again.</p>
@@ -168,12 +168,12 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-b.jpg)">
+        <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-b.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: RESTAURANTS</span> <br>
                 COMPLETE THE DINING EXPERIENCE</h2>
-              <p class="animate__animated animate__fadeInUp mt-5">For a restaurant, the right sights and sounds complement
+              <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
                 great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs
                 and content using our cloud software. It’s all on the menu.</p>
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
@@ -182,13 +182,12 @@
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-c.jpg)">
+        <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-c.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="green">AFLAX: HEALTHCARE</span> <br>DELIVER
                 A HEALTHY DOSE OF MUSIC – AND MORE</h2>
-              <p class="animate__animated animate__fadeInUp mt-5">Creating a comfortable experience and operating an
-                efficient practice are the keys to a high level of patient care. With Aflax’s proven healthcare
+              <p class="animate__animated animate__fadeInUp">With Aflax’s proven healthcare
                 solutions, you’ll provide a soothing and welcoming environment for your patients. Bundle solutions to
                 reduce overhead costs for maximum ROI.</p>
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
@@ -197,17 +196,15 @@
         </div>
 
         <!-- Slide 4 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-d.jpg)">
+        <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-d.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: CONVENIENCE STORE</span>
-                <br>BRING CUSTOMERS BACK WITH Aflax Digital Signage
+                <br>BRING CUSTOMERS BACK
               </h2>
-              <p class="animate__animated animate__fadeInUp mt-5">Bringing customers back is all about meeting expectations
+              <p class="animate__animated animate__fadeInUp">Bringing customers back is all about meeting expectations
                 and delivering a consistent experience. With our affordable and proven solutions, you’ll drive in-store
                 traffic and build lasting customer loyalty for the repeat business that convenience stores rely on.
-                Promote high-margin items and drive traffic in-store with Pumpside Messaging. Turnkey programmes
-                designed specifically for convenience store applications.
               </p>
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
@@ -215,13 +212,12 @@
         </div>
 
         <!-- Slide 5 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-c.jpg)">
+        <div class="carousel-item mt-5" style="background-image: url(assets/img/slide/slide-c.jpg)">
           <div class="carousel-container mt-5">
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: HOSPITALITY</span> <br>PUT
                 THEM IN THE MOOD TO STAY</h2>
-              <p class="animate__animated animate__fadeInUp mt-5">Guests are always coming and going. Entice them to come
-                back again and again by creating an engaging, multi-sensory experience they’ll never forget. Whatever
+              <p class="animate__animated animate__fadeInUp">Guests are always coming and going. Whatever
                 your style – boutique, extended stay, or full service – the right audio, visuals and scent can work
                 together to set the distinct mood that speaks to your brand and your clientele, ensuring lasting guest
                 loyalty.</p>
@@ -348,47 +344,6 @@
           <div class="row mt-5">
             <div class="col-md-4">
               <div class="text-center">
-                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/hardware.png" alt="">
-              </div>
-              <h6><b>Hardware</b></h6>
-              <p>Choose from Aflax’s Andriod compact digital signage media player that plugs directly into the back of
-                any
-                commercial screen with minimal wiring or one of our partners embedded display panels – which completely
-                removes the need for any external hardware.</p>
-            </div>
-            <div class="col-md-4">
-              <div class="text-center">
-                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/cloude.png" alt="">
-              </div>
-              <h6><b>Cloud Based</b></h6>
-              <p>The Aflax interactive digital signage platform is an extremely intuitive digital tool which allows you
-                to easily create, edit, manage, deploy and report on digital content in real-time. It’s all cloud-based
-                which means you don’t have to worry about downloading any software.</p>
-            </div>
-            <div class="col-md-4">
-              <div class="text-center">
-                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/project.png" alt="">
-              </div>
-              <h6><b>Custom Projects</b></h6>
-              <p>Our team can deliver custom applications and creative digital experiences, bespoke to your unique
-                project requirements. Our FREE consultancy process helps us to understand who you want to communicate
-                with, what you want to say and when. We can then select the right combination of products and services
-                which provides you with a bespoke solution.</p>
-            </div>
-          </div>
-
-          <div class="row mt-5">
-            <div class="col-md-4">
-              <div class="text-center">
-                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/signage.png" alt="">
-              </div>
-              <h6><b>Internal Signage</b></h6>
-              <p>From internal communications to reception displays you can broadcast videos or content in real-time on
-                screens. With Aflax, digital signage can instantly inform and inspire your audience which increases
-                staff engagement and productivity.</p>
-            </div>
-            <div class="col-md-4">
-              <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/menu.png" alt="">
               </div>
               <h6><b>Menu Boards</b></h6>
@@ -398,6 +353,27 @@
             </div>
             <div class="col-md-4">
               <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/interactive.png" alt="">
+              </div>
+              <h6><b>Interactive and Intelligent Signage</b></h6>
+              <p>From place and learn and intelligent menu boards to magic mirrors and touch sensor experiences, Aflax
+                provides you with all the tools to build fully interactive applications and signage content with ease.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/signage.png" alt="">
+              </div>
+              <h6><b>Internal Signage</b></h6>
+              <p>From internal communications to reception displays you can broadcast videos or content in real-time on
+                screens. With Aflax, digital signage can instantly inform and inspire your audience which increases
+                staff engagement and productivity.</p>
+            </div>
+          </div>
+
+          <div class="row mt-5">
+            <div class="col-md-4">
+              <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/outdoor.png" alt="">
               </div>
               <h6><b>Outdoor Signage</b></h6>
@@ -405,9 +381,6 @@
                 signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall by
                 capturing new customers and raising brand awareness.</p>
             </div>
-          </div>
-
-          <div class="row mt-5">
             <div class="col-md-4">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/video.png" alt="">
@@ -424,14 +397,37 @@
               <p>Deploy promotional campaigns straight to the shelf edge. Directly influence in-store purchases with
                 product videos, dynamic pricing and offers, loyalty card incentives, online reviews and much more.</p>
             </div>
+          </div>
+
+          <div class="row mt-5">
             <div class="col-md-4">
               <div class="text-center">
-                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/interactive.png" alt="">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/project.png" alt="">
               </div>
-              <h6><b>Interactive and Intelligent Signage</b></h6>
-              <p>From place and learn and intelligent menu boards to magic mirrors and touch sensor experiences, Aflax
-                provides you with all the tools to build fully interactive applications and signage content with ease.
-              </p>
+              <h6><b>Custom Projects</b></h6>
+              <p>Our team can deliver custom applications and creative digital experiences, bespoke to your unique
+                project requirements. Our FREE consultancy process helps us to understand who you want to communicate
+                with, what you want to say and when. We can then select the right combination of products and services
+                which provides you with a bespoke solution.</p>
+            </div>
+            <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/cloude.png" alt="">
+              </div>
+              <h6><b>Cloud Based</b></h6>
+              <p>The Aflax interactive digital signage platform is an extremely intuitive digital tool which allows you
+                to easily create, edit, manage, deploy and report on digital content in real-time. It’s all cloud-based
+                which means you don’t have to worry about downloading any software.</p>
+            </div>
+            <div class="col-md-4">
+              <div class="text-center">
+                <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/hardware.png" alt="">
+              </div>
+              <h6><b>Hardware</b></h6>
+              <p>Choose from Aflax’s Andriod compact digital signage media player that plugs directly into the back of
+                any
+                commercial screen with minimal wiring or one of our partners embedded display panels – which completely
+                removes the need for any external hardware.</p>
             </div>
           </div>
 
@@ -439,6 +435,7 @@
 
       </div>
     </section><!-- End What we do Section -->
+
     <br>
     <br>
     <br>
