--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
           </div>
           <div class="col-md-4 text-center p-2">
-            <img style="height: 100px;" class="img-fluid" src="assets/img/logo/aflaxdigitalsignagelogowhite.png">
+            <a href="index.html"><img style="height: 100px;" class="img-fluid" src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
           </div>
           <div class="col-md-4 text-center p-2">
             <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
