--- a/retail.html
+++ b/retail.html
@@ -42,7 +42,7 @@
 
   <div class="fixed-top">
     <!-- ======= Header ======= -->
-    <div class="top-header p-4">
+    <div class="top-header">
       <div class="container">
         <div class="row d-flex align-items-center justify-content-evenly">
           <div class="col-md-4 text-center p-2">
@@ -61,15 +61,8 @@
     <header id="header" class="d-flex align-items-center" style="background-color: #000; color: #ffffff;">
       <div class="container d-flex justify-content-center">
 
-        <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
-            Digital</span><span class="green"> Signage</span> </a></h1> -->
-        <!-- <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1> -->
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
         <nav id="navbar" class="navbar">
           <ul>
-            <!-- <li><a href="index.html" class="active">Home</a></li> -->
 
             <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
@@ -153,7 +146,7 @@
           <div class="carousel-item active"
             style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
             <div class="carousel-container">
-              <div class="container">
+              <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5">
                   Are you looking to create a dynamic in-store experience with Digital Store Signage?
                 </h2>
@@ -165,7 +158,7 @@
           <div class="carousel-item"
             style="background-image: url(assets/img/retail/cover_image_1613400805.jpg.760x400_q85_crop_upscale.jpg)">
             <div class="carousel-container">
-              <div class="container">
+              <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5">
                   Aflax will provide you with a solution that promises to increase customer engagement and boost sales.
                 </h2>
@@ -176,7 +169,7 @@
           <!-- Slide 3 -->
           <div class="carousel-item" style="background-image: url(assets/img/retail/DS-1024x812.jpg)">
             <div class="carousel-container">
-              <div class="container">
+              <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5">Put your
                   customers in the mood to buy.
                 </h2>
