retail page updated

--- a/retail.html
+++ b/retail.html
@@ -49,7 +49,8 @@
             <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
           </div>
           <div class="col-md-4 text-center p-2">
-            <a href="index.html"><img style="height: 100px;" class="img-fluid" src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
+            <a href="index.html"><img style="height: 100px;" class="img-fluid"
+                src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
           </div>
           <div class="col-md-4 text-center p-2">
             <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
@@ -61,8 +62,15 @@
     <header id="header" class="d-flex align-items-center" style="background-color: #000; color: #ffffff;">
       <div class="container d-flex justify-content-center">
 
+        <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
+            Digital</span><span class="green"> Signage</span> </a></h1> -->
+        <!-- <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1> -->
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
         <nav id="navbar" class="navbar">
           <ul>
+            <!-- <li><a href="index.html" class="active">Home</a></li> -->
 
             <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
