retail page updated

--- a/retail.html
+++ b/retail.html
@@ -143,7 +143,7 @@
   <main id="main">
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero">
+    <section id="hero" style="height: 80vh;">
       <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
         <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
@@ -155,7 +155,7 @@
             style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
             <div class="carousel-container">
               <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5">
+                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
                   Are you looking to create a dynamic in-store experience with Digital Store Signage?
                 </h2>
               </div>
@@ -167,7 +167,7 @@
             style="background-image: url(assets/img/retail/cover_image_1613400805.jpg.760x400_q85_crop_upscale.jpg)">
             <div class="carousel-container">
               <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5">
+                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
                   Aflax will provide you with a solution that promises to increase customer engagement and boost sales.
                 </h2>
               </div>
@@ -178,7 +178,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/retail/DS-1024x812.jpg)">
             <div class="carousel-container">
               <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5">Put your
+                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>Put your
                   customers in the mood to buy.
                 </h2>
               </div>
@@ -243,7 +243,7 @@
           </div>
           <div class="col-md-5 offset-md-1 d-flex align-items-center">
             <div id="carouselExampleIndicatorsR1" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner d-flex align-items-center">
+              <div class="carousel-inner d-flex align-items-center" style="height: 80vh;">
                 <div class="carousel-item active">
                   <br>
                   <br>
@@ -346,7 +346,7 @@
         <div class="row  p-3 mb-5 rounded">
           <div class="col-md-6 d-flex align-items-center">
             <div id="carouselExampleIndicatorsR2" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
+              <div class="carousel-inner d-flex align-items-center" style="height: 50vh;">
                 <div class="carousel-item active">
                   <br>
                   <br>
@@ -472,7 +472,7 @@
           </div>
           <div class="col-md-5 offset-md-1 d-flex align-items-center">
             <div id="carouselExampleIndicatorsC3" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
+              <div class="carousel-inner d-flex align-items-center" style="height: 50vh;">
                 <div class="carousel-item active">
                   <br>
                   <br>
