retail page update

--- a/retail.html
+++ b/retail.html
@@ -168,7 +168,7 @@
             <div class="carousel-container">
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
-                  Aflax will provide you with a solution that promises to increase customer engagement and boost sales.
+                  We will provide you with a solution that promises to increase customer engagement and boost sales.
                 </h2>
               </div>
             </div>
@@ -635,8 +635,68 @@
     </div>
     <!-- End Features Section -->
 
+    <!-- ======= Start Our Product Section ======= -->
+    <div class="container text-center mt-5">
+      <h2>Digital Signage Products for Retail Industry</h2>
+      <div class="row">
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="col-md-2 m-5">
+          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+    </div>
+    <!-- ======= End Our Product Section ======= -->
+
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact white-smoke">
       <div class="container">
         <h1 class="text-center"><b><span class="red">CONTACT US TODAY</span></b></h1>
         <h6 class="text-center text-primary"><b> Our current happy users started here...</b></h6>
